--- a/CaseStudy/Views/Brand/Index.cshtml
+++ b/CaseStudy/Views/Brand/Index.cshtml
@@ -4,22 +4,31 @@
 }
 <div class="flex-container">
     <div class="w-100">
-        <h4 style="text-align:center">Brands</h4>
-        <br />
-        <form asp-controller="Brand" asp-action="Index" method="post">
-            <select asp-for="Id" asp-items="@Model.GetBrands()"
-                    class="form-group form-control" onchange="this.form.submit();">
-                <option selected style="display:none;">Select Category</option>
-            </select>
-        </form>
-        @if (Model.Products != null && Model.Products.Count() > 0)
+        <div class="text-center">
+            <img src="~/images/store.png" style="height:55px;width:75px;" class="mb-2" />
+            <h4 class="text-primary text-center mt-5">Brands</h4>
+            <form asp-controller="Brand" asp-action="SelectBrand" method="post">
+                <select asp-for="BrandId" asp-items="@Model.GetBrands()"
+                        class="form-group form-control" onchange="this.form.submit();">
+                    <option selected style="display:none;">Select Brand</option>
+                </select>
+            </form>
+        </div>
+        @if (Context.Session.Get<MenuProductViewModel[]>("menu") != null && Model.BrandId > 0)
         {
-            <h5 class="mt-2">Items</h5>
+            MenuProductViewModel[] menu = Context.Session.Get<MenuProductViewModel[]>("menu");
+            <h6 class="text-primary mt-5">Available Laptops</h6>
             <div class="row w-100 m-1" style="overflow-y:scroll;height:60vh;">
-                @foreach (Product item in Model.Products)
+                @foreach (MenuProductViewModel item in menu)
                 {
-                    <div id="item" class="col-sm-3 col-xs-12 text-center" style="border:solid;">
-                        <img class="mt-2" src="~/images/burger.jpg" /><br />
+                    // remove double apostrophe
+                    item.Description = item.Description.Contains("''") ?
+                    item.Description.Replace("''", "") : item.Description;
+                    var itemjson = JsonConvert.SerializeObject(item);
+                    var btn = "catbtn" + item.Id;
+
+                    <div id="item" class="col-sm-3 col-xs-12 text-center m-1" style="border:solid;">
+                        <img class="mt-2" src="~/images/@item.GRA" style="height:140px;width:200px;" /><br />
                         @if (item.Description.Length > 25)
                         {
                             <span class="m-0" style="font-size:large;font-weight:bold;">@item.Description.Substring(0, 25)...</span>
@@ -28,11 +37,50 @@
                         {
                             <span style="font-size:large;font-weight:bold;">@item.Description</span>
                         }
-                        <p><span style="font-size:medium">Laptop info. in details</span><p>
-                            <a id="" class="btn btn-outline-dark pt-2 pb-2">Details</a>
+                        <p>
+                            <span style="font-size:medium">Laptop info. in details</span>
+                        <p>
+                            <a id="@btn" href="#details_popup" data-toggle="modal" class="btn btn-outline-dark pt-2 pb-2" data-id="@item.Id" data-details="@itemjson">Details</a>
                     </div>
                 }
             </div>
         }
     </div>
 </div>
+<div class="modal" id="details_popup">
+    <div class="modal-dialog">
+        <div class="modal-content col-12">
+            <div class="modal-body">
+                <button type="button" class="close" style="font-size:xx-large;" data-dismiss="modal">X</button>
+                <div class="text-center">
+                    <img alt="" id="detailsGraphic" style="height:140px;width:200px;" /><br />
+                    <h5 id="description" class="mt-4"></h5>
+                </div>
+                <form asp-controller="Brand" asp-action="SelectItem" method="post" role="form">
+                    <div class="text-center">
+                        <div class="modalrow mt-4">
+                            <div class="columnL">Price</div>
+                            <div class="columnR" id="cost"></div>
+                        </div>                       
+                        <div class="modalrow mb-2">
+                            <div class="columnL">Qty</div>
+                            <div class="columnR" id="cal">
+                                <input asp-for="Qty" type="number" maxlength="3" size="3"
+                                       style="width: 50px;" id="qty" />
+                                <input asp-for="Id" type="hidden" id="selectedId" />
+                            </div>
+                        </div>
+                    </div>
+                    <div class="text-center">
+                        <button type="submit" class="btn btn-outline-dark">
+                            Add To Cart
+                        </button>
+                    </div>
+                </form>
+            </div>
+            <div class="m-2">
+                <div class="text-center font-weight-bold" id="results"> @ViewBag.AddMessage</div>
+            </div>
+        </div><!--modal-content-->
+    </div><!--modal-dialog-->
+</div><!--modal-->
