--- a/CaseStudy/Views/_ViewImports.cshtml
+++ b/CaseStudy/Views/_ViewImports.cshtml
@@ -2,4 +2,5 @@
 @using CaseStudy.Models
 @using CaseStudy.Utils
 @using Newtonsoft.Json
+@addTagHelper *, CaseStudy
 @addTagHelper *, Microsoft.AspNetCore.Mvc.TagHelpers
