--- a/CaseStudy/Views/Home/Index.cshtml
+++ b/CaseStudy/Views/Home/Index.cshtml
@@ -2,6 +2,10 @@
     ViewData["Title"] = "Home Page";
 }
 <div class="m-4 text-center">
+    <img src="~/images/store.png" style="height:55px;width:75px;" class="mb-2" />
+</div>
+
+<div class="m-4 text-center">
     @if (ViewBag.Message != null)
     {
         ViewBag.Message = ViewBag.Message.Replace("\"", "");
