--- a/CaseStudy/Views/Shared/_Layout.cshtml
+++ b/CaseStudy/Views/Shared/_Layout.cshtml
@@ -21,6 +21,9 @@
         <span>
             <a class="navbar-brand" asp-area="" asp-controller="Home" asp-action="Index">Case Study</a>
         </span>
+        <span class="text-right m-3 font-weight-bold">
+            @Context.Session.GetString(SessionVariables.LoginStatus)
+        </span>
         <button class="navbar-toggler float-right navbar-dark" type="button" data-toggle="collapse" data-target=".navbar-collapse" aria-controls="navbarSupportedContent"
                 aria-expanded="false" aria-label="Toggle navigation">
             <span class="navbar-toggler-icon float-right"></span>
@@ -36,6 +39,13 @@
                     </li>
                     <li>
                         <a class="nav-link text-dark" asp-area="" asp-controller="Brand" asp-action="Index">Brand</a>
+                    </li>
+                    <li class="nav-item"><a class="nav-link text-dark" asp-area="" asp-controller="Register" asp-action="Index">Register</a></li>
+                    <li class="nav-item">
+                        <a class="nav-link text-dark" asp-area="" asp-controller="Login" asp-action="Index">Login</a>
+                    </li>
+                    <li class="nav-item">
+                        <a class="nav-link text-dark" asp-area="" asp-controller="Login" asp-action="Logoff">Logoff</a>
                     </li>
                 </ul>
             </div>
