--- a/CaseStudy/Views/Shared/_Layout.cshtml
+++ b/CaseStudy/Views/Shared/_Layout.cshtml
@@ -47,6 +47,9 @@
                     <li class="nav-item">
                         <a class="nav-link text-dark" asp-area="" asp-controller="Login" asp-action="Logoff">Logoff</a>
                     </li>
+                    <li class="nav-item">
+                        <a class="nav-link text-dark" asp-area="" asp-controller="Cart" asp-action="List">Carts</a>
+                    </li>
                 </ul>
             </div>
         </div>
