--- a/CaseStudy/Views/Branch/Index.cshtml
+++ b/CaseStudy/Views/Branch/Index.cshtml
@@ -20,7 +20,6 @@
             </i>
         </p>
         <input type="button" v-on:click="loadAndShowModal();" value="locate" class="btn btn-default" />
-        <div id="map" class="googlemap" style="height:250px;width:50vw;margin:0 auto;margin-top:5%;"></div>
     </div>
     <storemodal v-if="showModal" v-on:close="showModal = false" :lat="lat" :lng="lng"></storemodal>
 </div>
@@ -34,8 +33,8 @@
                     <button type="button" class="close" style="font-size:xx-large;" v-on:click="$emit('close')">
                         X
                     </button>
-                    <h3 class="text-center">3 Closest Stores</h3>
-                    <div id="map1" class="googlemap"></div>
+                    <h3 class="text-center">3 Closest Branches</h3>
+                    <div id="map" class="googlemap"></div>
                 </div>
             </div>
         </div>
